@@ -1,4 +1,5 @@
 Version 1.3
+ - Fixed Issue 660 - Update Aeotec msesv2 parameters
  - Fixed Issue 383 - Update Remotec ZXT-120 Config file thanks to yy.bendavid & gizmocuz (Alex)
  - Fixed Issue 392 - Add Qubino ZMNHJA2 Config file thanks to nicoserveur (Alex)
  - Fixed Issue 394 - Add 2GIG CT100 USA version device thanks to mldkfa (Alex)
